Compiler/test_inputs/valid/06_dotted_user_call.mt
@triton.jit
def dot_kernel(x): {
  y = math.scale(x, 4);
}
