Compiler/test_inputs/invalid/15_multiple_kernels.mt
@triton.jit
def first(x): {
  y = x;
}

@triton.jit
def second(z): {
  w = z;
}
